# token-acl-gate

./: .gitignore  Cargo.toml  codama.ts  codoma.ts  package.json  pnpm-lock.yaml  readme.md
cli/: Cargo.toml
cli/src/: main.rs
program/: Cargo.toml  idl.json
program/src/: lib.rs
program/src/instructions/: can_thaw_permissionless.rs  setup_extra_metas.rs
program/src/state/: mod.rs
sdk/rust/: Cargo.toml
sdk/rust/tests/: allow_eoa_list_test.rs  allow_list_test.rs  basic.rs  block_list_test.rs  composite_list_test.rs  program_test.rs
sdk/ts/: package.json  pnpm-lock.yaml  tsconfig.json
