[package]
name = "allow-block-list-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.31"
trezoa-clap-v3-utils = "2.2.0"
trezoa-cli-config = "2.2.0"
trezoa-client = "2.2.0"
trezoa-logger = "2.2.0"
trezoa-remote-wallet = "2.2.0"
trezoa-sdk = "2.2.0"
tpl-token-client = { version = "0.13.0" }
tokio = { version = "1", features = ["full"] }
allow-block-list-client = { workspace = true }
tpl-tlv-account-resolution = "0.8.1"
tpl-transfer-hook-interface = { version = "0.8.2" }
token-acl-client = { workspace = true }
token-acl-interface = { workspace = true }



[[bin]]
name = "allow-block-list"
path = "src/main.rs"