[package]
name = "allow-block-list-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "allow_block_list_client"

[features]
default = []
serde = []
fetch = []
trezoaanchor = []
trezoaanchor-idl-build = []

[dependencies]
trezoa-program = "2.2.1"
trezoa-pubkey = { workspace = true }
trezoa-account-info = { workspace = true }
trezoa-instruction = { workspace = true }
trezoa-program-error = { workspace = true }
trezoa-cpi = { workspace = true }
kaigan = ">=0.2.6"
borsh = "^0.10"
num-derive = "0.4.2"
num-traits = "0.2.19"

[dev-dependencies]
litesvm = "0.6.1"
trezoa-program-runtime = { workspace = true }
trezoa-sdk = { workspace = true }
tpl-token-2022 = { workspace = true }
trezoa-system-interface = { workspace = true }
spl-associated-token-account-client  = { workspace = true }
tokio = { version = "^1.20", features = ["rt-multi-thread", "macros"] }
trezoa-compute-budget-interface = "2.2.1"
trezoa-decode-error = { workspace = true }
trezoa-msg = { workspace = true }
trezoa-keypair = { workspace = true }
trezoa-program-entrypoint = { workspace = true }
spl-discriminator = { workspace = true }
spl-program-error = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-type-length-value = { workspace = true }
spl-pod = { workspace = true }
thiserror = "2.0"
borsh = "^0.10"
token-acl-interface = { workspace = true }
token-acl = { workspace = true }
token-acl-client = { workspace = true }